# FreqDP

./: CMakeLists.txt  Parameters.cpp  Parameters.h  README.md  Utils.h  buildCPP.sh  commonheader.h  main.cpp
Dataset/: README.md
cmake-build/: config.properties
cmake-build/Testing/outputs/logs/: log_file_will_appear_here.csv
grids/: Grid.cpp  Grid.h  StaticGrid.cpp  StaticGrid.h
io/: FileOutput.h  FileReader.cpp  FileReader.h  LogFile.cpp  LogFile.h
linking/: FrequencyVec.cpp  FrequencyVec.h  Functions.h  Signature.cpp  Signature.h
privacy/: EditOperation.h  GridCell.cpp  GridCell.h  HierarGrid.cpp  HierarGrid.h  NoiseGenerator.h  PerturbDistribution.h  Segment.cpp  Segment.h
privacy/global/: GlobalEdit.cpp  GlobalEdit.h  GlobalHGrid.cpp  GlobalHGrid.h  GlobalMechanism.h  gGridCell.cpp  gGridCell.h  gSegment.cpp  gSegment.h
privacy/local/: LocalEdit.cpp  LocalEdit.h  LocalHGrid.cpp  LocalHGrid.h  LocalMechanism.h  lGridCell.cpp  lGridCell.h  lSegment.cpp  lSegment.h
spatial/: GeoPoint.cpp  GeoPoint.h  Point.cpp  Point.h  Trip.cpp  Trip.h
